Use Stream.toList()